--- a/index.html
+++ b/index.html
@@ -8,43 +8,56 @@
   <title>Accessible Me</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Stick+No+Bills:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&amp;family=Stick+No+Bills:wght@300&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <div class="container">
+  <a href="#main-content" class="skip-link">Skip to Main Content</a>
+  <div id="container" role="main">
+    <header id="site-header" role="banner"></header>
     <div class="site-header">
       <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+      <nav class="main-nav" role="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
+      </nav>
       </div>
       <img src="https://placekitten.com/1200/900" class="banner">
-    </div>
-    <div class="main-content">
+    
+    <div id="main-content" class="main-content">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
         <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="name">NJohn Doe</li>
+          <li itemprop="jobTitle">Title: CEO</li>
+          <li itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
         <h1>Address</h1>
-        <p>
+        <!-- <p>
           Jambox Studios
           123 Guitar Road,
           Musicville, Danceistan
           B3T 0L0
-        </p>
+        </p> -->
+
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+            <span itemprop="underNames"> Jambox Studios </span>
+            <span itemprop="streetAddress">123 Guitar Road, </span>
+            <span itemprop="addressLocality">Musicville, </span>
+            <span itemprop="addressCountry">Danceistan </span>
+            <span itemprop="postalCode">B3T 0L0</span>
+          </li>
+        </ul>
       </div>
       <div class="contact-section">
         <h1>Contact Us</h1>
@@ -59,9 +72,10 @@
         </form>
       </div>
     </div>
-    <div class="site-footer">
+    <footer id="site-footer" role="contentinfo">
+    </footer>
       &copy; 2021 Jam Box Studios
-    </div>
+    </footer>
   </div>
 </body>
 
